fixes the non-determinism in the matching trigger; improves many different features like matching output; adds utility functions to models like Tag and Group; adds new vitality indicator based on the age of a wish

--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -45,8 +45,13 @@ body {
     }
 }
 
-h1, h2, h3 {
-  font-family: "ABeeZee", Arial, sans;
+h1, h2, h3, h4, h5, h6 {
+    font-family: "ABeeZee", Arial, sans;
+}
+
+.accordion-heading {
+    font-family: "ABeeZee", Arial, sans;
+    font-size: 1.3em;
 }
 
 /*
@@ -85,6 +90,7 @@ h1, h2, h3 {
     white-space: nowrap;
 
     color: @person-font-color;
+    font-family: "ABeeZee", Arial, sans;
     font-size: 1.2em;
     font-style: italic;
     text-decoration: underline;
@@ -167,6 +173,7 @@ h1, h2, h3 {
         bottom: 0.6em;
         right: 0.4em;
         float: right;
+        font-family: "ABeeZee", Arial, sans;
         font-size: 2.8em;
         font-style: italic;
         font-weight: bold;
@@ -243,7 +250,6 @@ h1, h2, h3 {
         font-size: 0.8em;
         float: right;
     }
-    
 }
 
 /* Containers */
