--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -2,11 +2,13 @@
 
 @tag-background-color:            rgba(189, 47, 47, 1);
 @tag-font-color:                  white;
-@person-background-color:        rgba(50, 100, 200, 1);
-@person-font-color:              white;
+@person-background-color:         rgba(50, 100, 200, 1);
+@person-font-color:               white;
 @group-background-color:          white;
 @group-font-color:                black;
 @group-color:                     rgb( 230,136,33 );
+@group-new-color:                 darken( @group-color, 15% );
+
 
 .marked {
     border: 1px dashed white;
@@ -192,7 +194,6 @@ h1, h2, h3, h4, h5, h6 {
         width: 80%;
         font-weight: bold;
 
-
         cursor: pointer;
 
         .control {
@@ -211,6 +212,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 
 }
+
+.group-new {
+    border-left-color: @group-new-color;
+    border-bottom-color: @group-new-color;
+}
+
+
 
 .tag {
     background-color: @tag-background-color;
