--- a/templates/group/detailed.html
+++ b/templates/group/detailed.html
@@ -25,11 +25,9 @@
 
     <div class="row-fluid">
         <h3 class="span6">Eksisterer siden <small>{{ group.created }}</small></h3>
-
         <h3 class="pull-right">
             <small>{% if group.tags|length > 1 %}{{ group.tags|length }}{% endif %}</small> tagger
         </h3>
-
     </div>
 
     <div class="row-fluid">
@@ -58,7 +56,7 @@
             </div>
             <div id="group-description" class="accordion-body collapse">
                 <div class="accordion-inner">
-                    <small>Tom</small>
+                    {{ group.description }}
                 </div>
             </div>
             <!-- Statistikk -->
