enables simple in-group communication

--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -314,12 +314,14 @@ h1, h2, h3, h4, h5, h6 {
     @navigation-height: 1em;
     .navigation {
         bottom: @navigation-height;
+        font-family: "ABeeZee", Arial, sans;
         right: 1em;
 
         a {
             color: #CCC;
             text-decoration: none;
             margin-right: 2em;
+            margin-left: 1em;
         }
     }
 
