--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -6,12 +6,10 @@
 <div class="bar">
     <div class="navigation">
         <!-- group -->
-        <a class="button" href="/group/all">Groups</a>
+        <a class="button" href="/group/all">Andre grupper</a>
         <!-- prototype -->
-        <a class="button" href="/login/leave/">Leave</a>
-
+        <a class="button" href="/login/leave/">Logg av</a>
     </div>
 </div>
-
 {% endif %}
 {% endblock %}
