--- a/templates/login/setup.html
+++ b/templates/login/setup.html
@@ -39,6 +39,12 @@
         </div>
 
         <div class="control-group">
+            <label class="checkbox">Kryss av
+                <input type="checkbox" /> hvis du ikke vil bli kontaktet via e-post.
+              </label>
+        </div>
+
+        <div class="control-group">
             <div class="controls">
                 Trykk <button type="submit" class="btn" style="margin-left: 1em; margin-right: 1em;">jeg samtykker</button> kun hvis du aksepterer vilkårene.
             </div>
