--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -48,10 +48,20 @@
     {% if join %}
         <div pk="{{ group.pk }}">
             <div class="btn-group pull-right">
+                {% if person in group.persons.all %}
+                <button class="btn btn-danger" id="leave">
+                    <i class="icon-remove icon-white"></i>
+                    Forlat&nbsp;&nbsp;
+                </button>
+                {% else %}
                 <button class="btn btn-success" id="join">
                     <i class="icon-arrow-left icon-white"></i>
                     Bli med&nbsp;&nbsp;
                 </button>
+                {% endif %}
+                <a class="btn btn-warning" id="contact" href="#contactPopup{{ group.pk }}" role="button" class="btn" data-toggle="modal">
+                    <i class="icon-envelope icon-white"></i>
+                </a>
                 <a href="/group/{{ group.pk }}" class="btn btn-info" id="inspect">
                     <i class="icon-arrow-left icon-eye-open icon-white"></i>
                 </a>
