--- a/templates/group/groups.html
+++ b/templates/group/groups.html
@@ -6,7 +6,7 @@
 {% block groups %}
 <div class="groups">
 {% for group in groups|dictsort:"pk" %}
-    {% include "group/group.html" %}
+    {% include "group/group.html" with join=join %}
 {% endfor %}
 </div>
 {% endblock %}
