--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -7,8 +7,10 @@
     <div class="navigation">
         <!-- group -->
         <a class="button" href="/group/all">Andre grupper</a>
+        <!-- assistance -->
+        <a class="button" href="/group/assistance">Gruppene i nød</a>
         <!-- prototype -->
-        <a class="button" href="/login/leave/">Logg av</a>
+        <a class="button" href="/login/leave">Logg av</a>
     </div>
 </div>
 {% endif %}
