--- a/templates/group/detailed.html
+++ b/templates/group/detailed.html
@@ -2,25 +2,26 @@
 
 {% comment %}
     The detailed description of the group and its members.
-    Visualizes age, tag relationships and user-custom text
+    Visualizes age, tag relationships and custom text
     fields.
 {% endcomment %}
 
 {% block content %}
 
-<div class="container-fluid">
+<div class="container-fluid" id="detailed">
 
     <div class="row-fluid">
         <h1 class="pull-right"><small>Gruppe #</small>{{ group.pk }}</h1>
         <h3>Mål <small>{{ group.goal|default:"_____________________" }}</small></h3>
     </div>
 
-    <div class="row-fluid"
-         style="text-align: center; padding-top: 3em; padding-bottom: 2.6em;">
-        <h2>Medlemmer <small>{{ group.persons.all|length }} / {{ group.capacity }}</small></h2>
-        {% for person in group.persons.all %}
-        <span class="person">{{ person.username }}</span>
-        {% endfor %}
+    <div class="row-fluid">
+        <div class="members">
+            <h2>Medlemmer <small>{{ group.persons.all|length }} / {{ group.capacity }}</small></h2>
+            {% for person in group.persons.all %}
+            <span class="person">{{ person.username }}</span>
+            {% endfor %}
+        </div>
     </div>
 
     <div class="row-fluid">
@@ -49,17 +50,29 @@
 
     <hr />
 
-
     <div class="navbar">
-      <div class="navbar-inner">
-        <a class="brand" href="#">Du er medlem</a>
-        <ul class="nav">
-          <li class="active"><a href="#">Forlat</a></li>
-          <li><a href="#">Kontakt</a></li>
-          <li><a href="#">Regider</a></li>
-          <li><a href="#">Oppløs</a></li>
-        </ul>
-      </div>
+        {% if person in group.persons.all %}
+        <div class="navbar-inner">
+            <a class="brand" href="#">Du er medlem</a>
+            <form class="navbar-form">
+                <div class="btn-group pull-right">
+                    <!-- insignificant actions -->
+                    <button class="btn" href="#">Kontakt</button>
+                    <button class="btn" href="#">Redigér</button>
+                    <button class="btn" href="#">Forlat</button>
+                    <button class="btn" href="#">Oppløs</button>
+                </div>
+            </form>
+        </div>
+        {% else %}
+        <div class="navbar-inner">
+            <a class="brand" href="">Gruppe {{ group.pk }}</a>
+            <div class="btn-group pull-right">
+                <button class="btn" href="#">Bli med</button>
+                <button class="btn" href="#">Kontakt</button>
+            </div>
+        </div>
+        {% endif %}
     </div>
 
     <hr />
@@ -80,7 +93,7 @@
             <!-- Statistikk -->
             <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#group-stats">
-                    Egenskapene <i class="icon-question-sign pull-right"></i>
+                    Status <i class="icon-question-sign pull-right"></i>
                 </a>
             </div>
             <div id="group-stats" class="accordion-body collapse">
@@ -109,7 +122,7 @@
             <!-- Wishes -->
             <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#group-wishes">
-                    Ønskene <i class="icon-th-list pull-right"></i>
+                    Våre ønsker <i class="icon-th-list pull-right"></i>
                 </a>
             </div>
             {% if group.wishes.all|length > 1 %}
@@ -129,6 +142,18 @@
                 </div>
             </div>
             {% endif %}
+            <!-- Schedule -->
+            <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#group-schedule">
+                     Kalender <i class="icon-calendar pull-right"></i>
+                </a>
+            </div>
+            <div id="group-schedule" class="accordion-body collapse">
+                <div class="accordion-inner">
+                    None
+                </div>
+            </div>
+
             <!-- Contact -->
             <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#group-contact">
