--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -3,7 +3,9 @@
 
 {% block group %}
 
-{% if group.age < rules.NEW_GROUP_MARKER %}
+{% if group.age < rules.NEW_GROUP_MARKER_SECONDS %}
+<div class="group group-new" pk="{{ group.pk }}">
+{% elif not group.is_announced %}
 <div class="group group-new" pk="{{ group.pk }}">
 {% else %}
 <div class="group" pk="{{ group.pk }}">
@@ -13,15 +15,15 @@
     <div class="menu" pk="{{ group.pk }}">
         <div class="btn-toolbar">
             <div class="btn-group">
-                <a href="/group/{{ group.pk }}" class="btn btn-warning btn-mini" id="inspect">
-                    <i class="icon-eye-open icon-white"></i>
+                <a href="/group/{{ group.pk }}" class="btn btn-mini" id="inspect">
+                    <i class="icon-eye-open"></i>
                     Undersøk
                 </a>
-                <a class="btn btn-warning btn-mini" id="contact" href="#contactPopup{{ group.pk }}" role="button" class="btn" data-toggle="modal">
-                    <i class="icon-envelope icon-white"></i>
+                <a class="btn btn-mini" id="contact" href="#contactPopup{{ group.pk }}" role="button" class="btn" data-toggle="modal">
+                    <i class="icon-envelope"></i>
                     Kontakt
                 </a>
-                <button class="btn btn-success btn-mini
+                <button class="btn btn-mini btn-success
                 {% if group.needs_assistance %}active{% endif %}
                 " id="assist" data-toggle="button">
                     <i class="icon-question-sign icon-white"></i>
@@ -39,7 +41,11 @@
     {% endif %}
 
     <div class="number">
-        {% if group.age < rules.NEW_GROUP_MARKER %}*{% endif %}
+        {% if group.age < rules.NEW_GROUP_MARKER_SECONDS %}
+        <span class="icon">&#9733;</span>
+        {% elif not group.is_announced %}
+        <span class="icon">&#9733;</span>
+        {% endif %}
         {{ group.pk }}
     </div>
 
