--- a/templates/wish/new.html
+++ b/templates/wish/new.html
@@ -11,14 +11,14 @@
             <li class="tagit-new"></li>
         </ul>
         <div class="btn-toolbar">
-        <a href="/my/search/" class="btn btn-large btn-info span3 disabled" type="button" tabindex="3">
-            <i class="icon-white icon-search pull-left"></i>
-            Søk
-        </a>
-        <button class="btn btn-large btn-success span9 pull-right" onclick="submit()" tabindex="2">
-            <i class="icon-white icon-ok pull-right"></i>
-            Registrér
-        </button>
+            <a href="/my/search/" style="cursor: not-allowed;"class="btn btn-large btn-info span3 disabled" type="button" tabindex="3">
+                <i class="icon-white icon-search pull-left"></i>
+                Søk
+            </a>
+            <button class="btn btn-large btn-success span9 pull-right" onclick="submit()" tabindex="2">
+                <i class="icon-white icon-ok pull-right"></i>
+                Registrér
+            </button>
         </div>
     </form>
 </div>
