--- a/static_base/stylesheets/unifi.less
+++ b/static_base/stylesheets/unifi.less
@@ -35,8 +35,8 @@ body {
         width: @content-width;
         padding: 3em 1em 3em 1em;
         text-align: left;
-        -moz-border-radius: 0.6em;
-        border-radius: 0.6em;
+        -moz-border-radius: 0.3em;
+        border-radius: 0.3em;
         -moz-box-shadow: 1px 1px 3px #555;
         -webkit-box-shadow: 1px 1px 3px #555;
         box-shadow: 1px 1px 3px #555;
@@ -50,6 +50,12 @@ h1, h2, h3, h4, h5, h6 {
 .accordion-heading {
     font-family: "ABeeZee", Arial, sans;
     font-size: 1.3em;
+}
+.modal {
+    form {
+        padding-bottom: 0em;
+        margin-bottom: 0em;
+    }
 }
 
 /*
