--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -86,21 +86,21 @@
     <!-- join -->
 
     <div class="modal hide fade" id="contactPopup{{ group.pk }}" pk="{{ group.pk }}" tabindex="-1" role="dialog" aria-labelledby="contactPopup{{group.pk}}" aria-hidden="true">
+    <form action="/group/{{ group.pk }}/correspondence" method="POST">{% csrf_token %}
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             <h3>Kontakt <small>Gruppe#{{ group.pk }}</small></h3>
         </div>
-        <form action="/group/{{ group.pk }}/correspondence" method="POST">{% csrf_token %}
-            <div class="modal-body">
-                <div class="row-fluid">
-                    <textarea rows="10" class="span12" name="message">Hei folkens, det er {{ person.user.username }}!</textarea>
-                </div>
+        <div class="modal-body">
+            <div class="row-fluid">
+                <textarea rows="10" class="span12" name="message">Hei folkens, det er {{ person.user.username }}!</textarea>
             </div>
-            <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">Lukk</button>
-                <button type="submit" class="btn btn-primary">Send</button>
-            </div>
-        </form>
+        </div>
+        <div class="modal-footer">
+            <button class="btn pull-left" data-dismiss="modal" aria-hidden="true">Lukk</button>
+            <button type="submit" class="btn btn-primary">Send</button>
+        </div>
+    </form>
     </div>
 </div>
 
