--- a/templates/header/notification.html
+++ b/templates/header/notification.html
@@ -1,9 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% block notification %}
 
-</body>
-</html>
+<div class="modal hide fade" id="notification" tabindex="-1" role="dialog" aria-labelledby="notification" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3>Feil <small>skjedde</small></h3>
+    </div>
+    <div class="modal-body">
+        <div class="row-fluid">
+            Houston, we have a problem.
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn pull-left" data-dismiss="modal" aria-hidden="true">Avbryt</button>
+        <button type="submit" class="btn btn-primary">OK</button>
+    </div>
+</div>
+
+{% endblock %}
