--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+{% include "header/initialize.html" %}
 {% include "header/navigation.html" %}
 {% include "header/status.html" %}
 {% include "header/focus.html" %}
