--- a/templates/group/group.html
+++ b/templates/group/group.html
@@ -12,6 +12,9 @@
 {% endif %}
     {% if controls %}
     <!-- menu -->
+    <div class="hint" pk="{{ group.pk }}">
+        <i class="icon icon-hand-up icon-white"></i>
+    </div>
     <div class="menu" pk="{{ group.pk }}">
         <div class="btn-toolbar">
             <div class="btn-group">
