--- a/templates/header/navigation.html
+++ b/templates/header/navigation.html
@@ -5,6 +5,8 @@
 {% if user.is_authenticated %}
 <div class="bar">
     <div class="navigation">
+        <!-- my -->
+        <a class="button" href="/my/">Din Side</a>
         <!-- group -->
         <a class="button" href="/group/all">Andre grupper</a>
         <!-- assistance -->
